style: bigger inputs and fix scrollbar

--- a/app/assets/stylesheets/snomed_concepts.scss
+++ b/app/assets/stylesheets/snomed_concepts.scss
@@ -1,3 +1,3 @@
 #concepts-list{
-  height: calc(100% - 4.6rem);
+  height: calc(100% - 10rem);
 }
